Fix overflow on `pre` elements

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -19,6 +19,10 @@ body {
   line-height: 1.333;
 }
 
+pre {
+  overflow: auto;
+}
+
 @media only screen and (min-width: 40rem) {
   body {
     margin: 0 auto;
